--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7636135036824114"
+    crossorigin="anonymous"></script>
   <title>Churrascou</title>
 </head>
 
